--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,10 +8,25 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Red_social</servlet-name>
 		<servlet-class>com.social.red.Red_socialServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>login-servlet</servlet-name>
+		<servlet-class>test.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>tutoriales</servlet-name>
+		<servlet-class>test.TutorialServlet</servlet-class>
+    </servlet>
 	<servlet-mapping>
 		<servlet-name>Red_social</servlet-name>
 		<url-pattern>/red_social</url-pattern>
 	</servlet-mapping>
+	<servlet-name>login-servlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>tutoriales</servlet-name>
+		<url-pattern>/tutoriales</url-pattern>
+    </servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
